Allow for retrieval of properties by source
