# server/backbone_server/dao/source_dao.py
@@ -209,71 +209,6 @@ class SourceDAO(EntityDAO):
 
         return entity_id
 
-    def get_summary_by_property(self, source, prop_name, threshold):
-
-        th = 0
-        if threshold:
-            th = threshold
-
-        self._connection = self.get_connection()
-        self._cursor = self._connection.cursor()
-
-        q = ("SELECT id, prop_type FROM `property_types` WHERE `source` = %s AND `prop_name` = %s")
-        self._cursor.execute(q, (source, prop_name,))
-
-        property_type_id = None
-        property_type = None
-        for (pti, pt) in self._cursor:
-            property_type_id = pti
-            property_type = pt
-
-        query = ('''SELECT count(ep.property_id), pt.`source`, pt.prop_name, pt.prop_type, p.''' + self.get_data_field(property_type.decode('utf-8')) + ''' from entity_properties ep
-            JOIN properties p ON p.id = ep.property_id
-            JOIN property_types pt ON pt.id = p.prop_type_id
-            WHERE `pt`.`source` = %s AND `pt`.`prop_name` = %s
-            GROUP BY (ep.property_id) HAVING COUNT(ep.property_id) > %s order by prop_name, ''' +
-                 self.get_data_field(property_type.decode('utf-8')))
-
-
-        self._cursor.execute(query, (source, prop_name, th))
-
-        results = []
-        for (count, source, pname, ptype, pvalue) in self._cursor:
-            summ = SummaryItem()
-            summ.source_name = pvalue.decode("utf-8")
-            summ.num_items = count
-            results.append(summ)
-
-        self._connection.commit()
-        self._cursor.close()
-        self._connection.close()
-
-        return results
-
-    def get_source_properties(self, source):
-
-        query = '''SELECT COUNT(pt.prop_name), pt.prop_name from property_types pt
-            JOIN properties p ON p.prop_type_id = pt.id
-                WHERE `pt`.source = %s
-                    GROUP BY (pt.prop_name);'''
-
-        self._connection = self.get_connection()
-        self._cursor = self._connection.cursor()
-
-        self._cursor.execute(query, (source,))
-
-        results = []
-        for (count, pname) in self._cursor:
-            summ = SummaryItem()
-            summ.source_name = pname.decode('utf-8')
-            summ.num_items = count
-            results.append(summ)
-
-        self._connection.commit()
-        self._cursor.close()
-        self._connection.close()
-
-        return results
 
     def get_report_count_by_source(self):
 
